2012-10-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-10-11  Mihai Balan  <mibalan@adobe.com>

        Always enable the experiments tab for WebKit nightly

        Web Inspector: Enabling experiments tab in WebKit nightly.
        https://bugs.webkit.org/show_bug.cgi?id=98923

        Reviewed by Pavel Feldman.

        Enabling Web Inspector experiments tab in WebKit nightly. This is done by adding a new
        Preference key, Preferences.experimentsEnabled. Default values are true for WebKit and false
        for Chromium. They can also be overridden as before (in Chromium)

        * src/js/DevTools.js:

2012-10-11  Kent Tamura  <tkent@chromium.org>

        Introduce Localizer::isRTL, and use it in DateTimeChooserImpl
        https://bugs.webkit.org/show_bug.cgi?id=98992

        * tests/LocalizedDateICUTest.cpp:
        (TEST_F): Re-enabled isRTL test.

2012-10-11  Kent Tamura  <tkent@chromium.org>

        [Chromium] Disable LocalizedDateICUTest.isRTL
        https://bugs.webkit.org/show_bug.cgi?id=98992

        * tests/LocalizedDateICUTest.cpp:
        (TEST_F): Disabled.

2012-10-11  Kent Tamura  <tkent@chromium.org>

        [Chromium] Attempt to fix LocalizedDateICUTest.isRTL
        https://bugs.webkit.org/show_bug.cgi?id=98992

        * tests/LocalizedDateICUTest.cpp:
        (TEST_F):

2012-10-11  Kent Tamura  <tkent@chromium.org>

        Introduce Localizer::isRTL, and use it in DateTimeChooserImpl
        https://bugs.webkit.org/show_bug.cgi?id=98992

        Reviewed by Kentaro Hara.

        * src/DateTimeChooserImpl.cpp:
        (WebKit::DateTimeChooserImpl::writeDocument): Use Localizer::isRTL.

        * tests/LocaleMacTest.cpp:
        (LocaleMacTest::isRTL): Added a helper function.
        (TEST_F): Added tests.
        * tests/LocaleWinTest.cpp:
        (LocaleWinTest::isRTL): Added a helper function.
        (TEST_F): Added tests.
        * tests/LocalizedDateICUTest.cpp: